# libgl

./: .clang-format  CMakeLists.txt  README.md
include/: defines.hpp  shader.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp  shader.cpp  vert_shader.vert
src/libgl/: error.hpp  products.hpp  shaders.cpp  shaders.hpp  test.hpp  texture.hpp  utility.hpp
